# aquaserveur

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
aquaserveur/: CMakeLists.txt  aquaserveur.cpp  aquaserveur.h
aquaserveur/analysis/: AdviceEngine.cpp  AnalysisEngine.cpp  AnalysisEngine.h  ManualTestManager.h  RoutineManager.h
aquaserveur/comm/: CommManager.cpp  CommandManager.h
aquaserveur/config/: ConfigLoader.cpp  ConfigManager.cpp  ConfigValidator.cpp
aquaserveur/core/: BootManager.cpp  BootManager.h  StateManager.cpp  SystemContext.h
aquaserveur/examples/: command_replace_config.json  command_set_output.json
aquaserveur/models/: AnalysisModels.h  CommandModels.h  ConfigModels.h  RuntimeModels.h
aquaserveur/network/: ProvisioningManager.cpp  ProvisioningManager.h
aquaserveur/outputs/: OutputManager.cpp  OutputManager.h
aquaserveur/sensors/: SensorManager.cpp  SensorManager.h
aquaserveur/storage/: SettingsStore.cpp
aquaserveur/support/: LogManager.cpp  LogManager.h  TimeService.cpp  TimeService.h
main/: CMakeLists.txt  aquaserveur.cpp  idf_component.yml
main/analysis/: AdviceEngine.h  ManualTestManager.cpp  RoutineManager.cpp
main/comm/: CommManager.h  CommandManager.cpp
main/config/: ConfigLoader.cpp  ConfigLoader.h  ConfigManager.h  ConfigValidator.cpp  ConfigValidator.h
main/core/: StateManager.h  SystemContext.cpp
main/data/: config.json
main/examples/: command_manual_test.json
main/models/: AnalysisModels.h  CommandModels.h  ConfigModels.h  RuntimeModels.h
main/network/: ProvisioningManager.cpp  ProvisioningManager.h
main/storage/: SdCardManager.cpp  SdCardManager.h  SettingsStore.cpp  SettingsStore.h
main/support/: LogManager.cpp  LogManager.h  TimeService.h
